Add task to include setup tasks in webserver.yml

--- a/webserver.yml
+++ b/webserver.yml
@@ -20,6 +20,9 @@
         group: awx
         mode: 0644
         state: touch
+    tasks:
+    - name: "Include setup tasks"
+      include_tasks: tasks/setup.yml
 
     - name: copy the content.
       lineinfile:
