--- a/webserver.yml
+++ b/webserver.yml
@@ -6,6 +6,7 @@
       dnf:
         name: httpd
         state: latest
+      ignore_errors: true
 
     - name: restart the web server on the target host
       service:
