--- a/webserver.yml
+++ b/webserver.yml
@@ -22,6 +22,7 @@
         group: awx
         mode: 0644
         state: touch
+      ignore_errors: true
     
     - name: "Include setup tasks"
       include_tasks: tasks/setup.yml
@@ -30,6 +31,7 @@
       lineinfile:
         path: /var/www/html/index.html
         line: "{{ web_message }}"
+      ignore_errors: true
 
       
       
